crates/monochange/tests/snapshots/cli_output__analyze_cli_json_falls_back_to_main_head_for_first_release_packages@analyze_cli_json_falls_back_to_main_head_for_first_release_packages.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - analyze
    - "--package"
    - core
    - "--format"
    - json
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "package": {
    "requested_reference": "core",
    "package_id": "core",
    "package_record_id": "cargo:crates/core/Cargo.toml",
    "package_name": "core",
    "ecosystem": "cargo",
    "manifest_path": "crates/core/Cargo.toml",
    "version_group_id": "sdk"
  },
  "release_identity": {
    "owner_id": "sdk",
    "owner_kind": "group",
    "group_id": "sdk",
    "tag": true,
    "release": true,
    "version_format": "primary",
    "members": [
      "core",
      "app"
    ],
    "version_source": "manifest"
  },
  "first_release": true,
  "refs": {
    "release": null,
    "main": "main",
    "head": "HEAD"
  },
  "frames": {
    "release_to_main": null,
    "main_to_head": {
      "frame": {
        "CustomRange": {
          "base": "main",
          "head": "HEAD"
        }
      },
      "detection_level": "signature",
      "package_analyses": {
        "core": {
          "package_id": "core",
          "package_record_id": "cargo:crates/core/Cargo.toml",
          "package_name": "core",
          "ecosystem": "cargo",
          "analyzer_id": "cargo/public-api",
          "changed_files": [
            "src/lib.rs"
          ],
          "semantic_changes": [
            {
              "category": "public_api",
              "kind": "added",
              "item_kind": "function",
              "item_path": "shout",
              "summary": "function `shout` added",
              "file_path": "src/lib.rs",
              "before_signature": null,
              "after_signature": "fn shout (name : & str) -> String"
            }
          ],
          "warnings": []
        }
      },
      "warnings": []
    },
    "release_to_head": null
  },
  "warnings": [
    "no prior release tag found for group `sdk`; treating `core` as a first release and analyzing only `main -> HEAD`"
  ]
}

----- stderr -----
