crates/monochange/tests/snapshots/cli_output__analyze_cli_text_defaults_to_group_release_tag_for_selected_package@analyze_cli_text_defaults_to_group_release_tag_for_selected_package.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - analyze
    - "--package"
    - core
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✔ Analyzed core · 1 semantic change main → HEAD

Package        core (core)
Ecosystem      cargo
Manifest       crates/core/Cargo.toml
Version group  sdk
Released as    group sdk
Refs           release v1.0.0 · main main · head HEAD

main → head (1)
  frame main..HEAD
  function `shout` added  src/lib.rs
  1 changed file:
    src/lib.rs

release → main (6)
  frame v1.0.0..main
  struct `Greeter` added                     src/lib.rs
  function `greet` modified                  src/lib.rs
  dependency `tracing` added                 Cargo.toml
  feature `feature.cli` added                Cargo.toml
  feature `feature.default` modified         Cargo.toml
  manifest_field `package.edition` modified  Cargo.toml
  2 changed files:
    Cargo.toml
    src/lib.rs

release → head (7)
  frame v1.0.0..HEAD
  function `shout` added                     src/lib.rs
  struct `Greeter` added                     src/lib.rs
  function `greet` modified                  src/lib.rs
  dependency `tracing` added                 Cargo.toml
  feature `feature.cli` added                Cargo.toml
  feature `feature.default` modified         Cargo.toml
  manifest_field `package.edition` modified  Cargo.toml
  2 changed files:
    Cargo.toml
    src/lib.rs

----- stderr -----
