crates/monochange/tests/snapshots/cli_output__change_cli_help_documents_package_and_group_targeting_rules@change_cli_help_documents_package_and_group_targeting_rules.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - change
    - "--help"
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Create a change file for one or more packages

Usage: monochange run change [--dry-run] [--interactive] [--package <PACKAGE>] [--bump <BUMP>] [--version <VERSION>] [--reason <REASON>] [--type <TYPE>] [--caused-by <CAUSED_BY>] [--details <DETAILS>] [--output <PATH>]

Options:
  -h, --help  Print help

Release Options:
      --dry-run  Run the command in dry-run mode when supported

Options:
  -i, --interactive            Select packages, bumps, and options interactively
      --package <PACKAGE>      Package or group to include in the change
      --bump <BUMP>            Requested semantic version bump [default: patch] [possible values: none, patch, minor, major]
      --version <VERSION>      Pin an explicit version for this release
      --reason <REASON>        Short release-note summary for this change
      --type <TYPE>            Optional release-note type such as `security` or `note`
      --caused-by <CAUSED_BY>  Package or group ids that caused this dependent change
      --details <DETAILS>      Optional multi-line release-note details
      --output <PATH>          Write the generated change file to a specific path

Global Options:
  -q, --quiet                     Suppress result, progress, and diagnostic output without changing execution
  -v, --verbose                   Show full result lists and logs, every step timing, and progress notes
      --progress-format <FORMAT>  Control progress output on stderr [possible values: auto, unicode, ascii, json]
      --jq <EXPRESSION>           Filter explicit JSON output; requires `--format json` or `--format json-min`
      --snapshot                  Print a normalized JSON snapshot for this command subtree

Examples:
  monochange run change --package sdk-core --bump patch --reason "fix panic"
  monochange run change --package sdk-core --bump minor --reason "add API" --output .changeset/sdk-core.md
  monochange run change --package sdk --bump minor --reason "coordinated release"
  monochange run change --package sdk-config --bump none --caused-by sdk-core --reason "dependency-only follow-up"

Rules:
  - Prefer configured package ids in change files whenever a leaf package changed.
  - Use a group id only when the change is intentionally owned by the whole group.
  - Dependents and grouped members are propagated automatically during planning.
  - Use `--caused-by` when a package is only changing because another package or group moved first.
  - Legacy manifest paths may still resolve during migration, but declared ids are the stable interface.


----- stderr -----
