crates/monochange/tests/snapshots/cli_output__change_cli_writes_explicit_versions_when_requested@change_cli_writes_explicit_versions_when_requested.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - change
    - "--package"
    - core
    - "--bump"
    - major
    - "--version"
    - 2.0.0
    - "--reason"
    - promote to stable
    - "--output"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpwOg03B/versioned.md
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
wrote change file versioned.md

----- stderr -----
