crates/monochange/tests/snapshots/cli_output__change_cli_writes_requested_file_contents@change_cli_writes_requested_file_contents.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - change
    - "--package"
    - core
    - "--bump"
    - minor
    - "--reason"
    - document cli snapshots
    - "--output"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpLQpJPG/feature.md
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
wrote change file feature.md

----- stderr -----
