crates/monochange/tests/snapshots/cli_output__discover_cli_json_reports_relative_paths_and_stable_ids@discover_cli_json_reports_relative_paths_and_stable_ids.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - discover
    - "--format"
    - json
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "dependencies": [
    {
      "direct": true,
      "from": "dart:dart/mobile_sdk/pubspec.yaml",
      "kind": "runtime",
      "to": "npm:packages/web-sdk/package.json"
    },
    {
      "direct": true,
      "from": "deno:deno/tool/deno.json",
      "kind": "runtime",
      "to": "npm:packages/web-sdk/package.json"
    },
    {
      "direct": true,
      "from": "npm:packages/web-sdk/package.json",
      "kind": "runtime",
      "to": "cargo:cargo/sdk-core/Cargo.toml"
    }
  ],
  "packages": [
    {
      "ecosystem": "cargo",
      "id": "cargo:cargo/sdk-core/Cargo.toml",
      "manifest_path": "cargo/sdk-core/Cargo.toml",
      "name": "sdk-core",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": "sdk",
      "workspace_root": "."
    },
    {
      "ecosystem": "dart",
      "id": "dart:dart/mobile_sdk/pubspec.yaml",
      "manifest_path": "dart/mobile_sdk/pubspec.yaml",
      "name": "mobile_sdk",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": null,
      "workspace_root": "."
    },
    {
      "ecosystem": "deno",
      "id": "deno:deno/tool/deno.json",
      "manifest_path": "deno/tool/deno.json",
      "name": "deno-tool",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": null,
      "workspace_root": "."
    },
    {
      "ecosystem": "npm",
      "id": "npm:packages/web-sdk/package.json",
      "manifest_path": "packages/web-sdk/package.json",
      "name": "web-sdk",
      "publish_state": "public",
      "version": "1.0.0",
      "version_group": "sdk",
      "workspace_root": "."
    }
  ],
  "version_groups": [
    {
      "id": "sdk",
      "members": [
        "cargo:cargo/sdk-core/Cargo.toml",
        "npm:packages/web-sdk/package.json"
      ],
      "mismatch_detected": false
    }
  ],
  "warnings": [],
  "workspace_root": "."
}

----- stderr -----
