crates/monochange/tests/snapshots/cli_output__multiline_comment@verify_cli_json_reports_failure_comment.snap
---
source: crates/monochange/tests/cli_output.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `crates/core/src/lib.rs`

Affected packages:
- `core`

Errors:
- changed packages are not covered by attached changesets: core

Allowed skip labels:
- `no-changeset-required`

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `monochange change --package <id> --bump patch --reason "describe the change"`
- or apply one of the configured skip labels when no release note is required
