crates/monochange/tests/snapshots/cli_output__placeholder_publish_dry_run_reports_missing_manual_registry_workflow_configuration@placeholder_publish_dry_run_reports_missing_manual_registry_workflow_configuration.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - placeholder-publish
    - "--dry-run"
    - "--format"
    - json
  env:
    MONOCHANGE_CRATES_IO_API_URL: "http://127.0.0.1:52495"
    MONOCHANGE_JSR_BASE_URL: "http://127.0.0.1:52495"
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_NPM_REGISTRY_URL: "http://127.0.0.1:52495"
    MONOCHANGE_PUB_DEV_API_URL: "http://127.0.0.1:52495"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error[config.invalid]: error: unrecognized subcommand 'placeholder-publish'
  cause: Usage: monochange [OPTIONS] <COMMAND>

    For more information, try '--help'.
  command: monochange placeholder-publish
  help: Check `monochange.toml` and the command arguments, then rerun the command.
