crates/monochange/tests/snapshots/cli_output__prepare_release_writes_manifest_json@prepare_release_writes_manifest_json.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - release
    - "--dry-run"
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
• Release preview · 2 packages · dry-run, no files were changed

Releases
  sdk  v1.1.0  group · tag · release

Packages (2)
  workflow-app, workflow-core

Changed files (6)
  Cargo.toml
  changelog.md
  crates/app/Cargo.toml
  crates/core/CHANGELOG.md
  crates/core/Cargo.toml
  group.toml

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)

----- stderr -----
