crates/monochange/tests/snapshots/cli_output__release_cli_reports_missing_changesets_cleanly@release_cli_reports_missing_changesets_cleanly.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - release
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error[config.invalid]: no markdown changesets found under .changeset
  command: monochange run release
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
